--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,11 +66,11 @@
 }
 
 .lh_16 {
-    line-height: 27px;
+    line-height: 16px;
 }
 
 .lh_14 {
-    line-height: 27px;
+    line-height: 14px;
 }
 
 /* .........................hero-section................ */
@@ -235,14 +235,6 @@
     max-width: 558px;
 }
 
-.video-container {
-    position: relative;
-    width: 100%;
-    height: 584px;
-    max-width: 558px;
-    overflow: hidden;
-}
-
 .ice-blast {
     width: 100%;
     height: 100%;
@@ -258,14 +250,6 @@
 
 .mb_20 {
     margin-bottom: 20px;
-}
-
-.height_440 {
-    height: 130px;
-}
-
-.height_264 {
-    height: 90px;
 }
 
 /* ........................section-3............ */
@@ -355,7 +339,6 @@
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
-    /* box-shadow: 0px 11px 44px -10px #00000040; */
 }
 
 .accordian2 {
@@ -484,16 +467,8 @@
     line-height: 21px;
 }
 
-.max_w631 {
-    max-width: 631px;
-}
-
 .pb_10 {
     padding-bottom: 10px;
-}
-
-.height_110 {
-    height: 110px;
 }
 
 .max_w966 {
@@ -622,13 +597,13 @@
     box-shadow: 0px 2px 34px 0px var(--latest-box);
     background: var(--primary-black);
     border-radius: 42px;
-    padding: 68px 30px 44px 30px;
+    padding: 50px 20px 30px 20px;
 }
 
 .mail_absolute {
     position: absolute;
     top: -50px;
-    left: 46%;
+    left: 38%;
 }
 
 .max_wimg81 {
@@ -640,7 +615,7 @@
     border-radius: 47px;
     background: var(--fc-white);
     width: 100%;
-    padding: 3px 3px 3px 20px;
+    padding: 15px 15px 15px 20px;
 }
 
 .mail_modify {
@@ -891,7 +866,7 @@ input[type=checkbox]:checked:before {
     display: none !important;
 }
 
-.container {
+.container1 {
     max-width: 1165px;
     margin-left: auto;
     margin-right: auto;
@@ -903,7 +878,6 @@ input[type=checkbox]:checked:before {
 .top_20 {
     top: -22%;
 }
-
 
 /* ..............................footer..................... */
 .bg-color2 {
@@ -981,20 +955,32 @@ input[type=checkbox]:checked:before {
 }
 
 .mb_50 {
-    margin-bottom: -100px;
+    margin-bottom: -25px;
 }
 
 .my_100 {
-    margin-top: -100px;
-    margin-bottom: -100px;
+    margin-top: -50px;
+    margin-bottom: -20px;
+}
+
+.mt_3 {
+    margin-top: -4px;
+}
+
+.pt_37 {
+    padding-top: 20px
+}
+
+.max_557 {
+    max-width: 557px;
+}
+
+.cursor_pointer {
+    cursor: pointer;
 }
 
 
-
-
-
-
-
+/* media_quaries */
 @media(max-width:991.99px) {
     .iconbox {
         width: 35px;
@@ -1063,11 +1049,15 @@ input[type=checkbox]:checked:before {
     }
 
     .max-wimg2 {
-        max-width: 540px;
+        max-width: 420px;
     }
 
     .max-wimg3 {
-        max-width: 500px;
+        max-width: 400px;
+    }
+
+    .mt_100 {
+        margin-top: -100px;
     }
 
 }
@@ -1158,6 +1148,26 @@ input[type=checkbox]:checked:before {
     .pt_100 {
         padding-top: 70px;
     }
+
+    .pt_37 {
+        padding-top: 37px
+    }
+
+    .mb_50 {
+        margin-bottom: -35px;
+    }
+
+    .mail_box {
+        padding: 50px 40px 40px 40px;
+    }
+
+    .input_modify {
+        padding: 3px 3px 3px 20px;
+    }
+
+    .mail_absolute {
+        left: 46%;
+    }
 }
 
 @media(min-width:768px) {
@@ -1173,14 +1183,6 @@ input[type=checkbox]:checked:before {
 
     .md_lh_57 {
         line-height: 57.6px;
-    }
-
-    .height_440 {
-        height: 260px;
-    }
-
-    .height_264 {
-        height: 140px;
     }
 
     .md_pb_80 {
@@ -1206,6 +1208,15 @@ input[type=checkbox]:checked:before {
     .pt_100 {
         padding-top: 100px;
     }
+
+    .mb_50 {
+        margin-bottom: -70px;
+    }
+
+    .mail_box {
+        padding: 68px 100px 40px 100px;
+    }
+
 }
 
 @media(min-width:992px) {
@@ -1228,14 +1239,6 @@ input[type=checkbox]:checked:before {
 
     .max_351 {
         max-width: 351px;
-    }
-
-    .height_440 {
-        height: 440px;
-    }
-
-    .height_264 {
-        height: 264px;
     }
 
     .lg_pb_121 {
@@ -1269,6 +1272,19 @@ input[type=checkbox]:checked:before {
 
     .mt_1 {
         margin-top: -3px !important;
+    }
+
+    .max_w613 {
+        max-width: 613px;
+    }
+
+    .my_100 {
+        margin-top: -100px;
+        margin-bottom: -100px;
+    }
+
+    .mail_box {
+        padding: 68px 226px 40px 227px;
     }
 
 }
@@ -1308,10 +1324,6 @@ input[type=checkbox]:checked:before {
         max-width: 631px;
     }
 
-    .mt_1 {
-        margin-top: 0 !important;
-    }
-
     .prev_button {
         left: 0;
         top: 45%;
@@ -1322,6 +1334,9 @@ input[type=checkbox]:checked:before {
         top: 45%;
     }
 
+    .mb_50 {
+        margin-bottom: -130px;
+    }
 }
 
 @media(min-width:1300px) {
